# nanachi

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  composite_test.html  context.rs  test_examples.sh
examples/: basic.rs  blur.rs  blur_low_cost.rs  composite_test.rs  composite_test_f32.rs  composite_test_premultiplied_f32.rs  conic_grad.rs  context.rs  dev.rs  draw_image_transformed.rs  fast_gauss_blur.rs  k_curve.rs  legacy_nanachi.rs  nanachi.rs  new_nanachi.rs  path.rs  path3.rs  path_data_notation.rs  pattern.rs  primitive_shapes.rs  profile.rs  pseudo_blur.rs  symbols.rs  text.rs
gui/: Cargo.toml  README.md
gui/src/: gui.rs  main.rs
src/: affine.rs  bezier.rs  bezier_area.rs  bold.rs  buffer.rs  context.rs  core.rs  direction.rs  draw.rs  draw_image.rs  draw_path.rs  draw_stroke.rs  fill_color.rs  fill_color_pattern.rs  fill_color_transform.rs  fill_path.rs  fill_path2.rs  fill_path_.rs  fill_rule.rs  geometry.rs  image_crate_adapter.rs  k_curve.rs  legacy_draw.rs  legacy_primitives.rs  lib.rs  main.rs  matrix.rs  models.rs  path.rs  path2.rs  path3.rs  path_builder.rs  path_flatten.rs  path_outline.rs  path_segments.rs  path_transform.rs  pixel.rs  point.rs  position_color.rs  primitives.rs  (+3 more)
src/compositor/: basic.rs  basic_enum.rs  basic_f32.rs  basic_premultiplied_f32.rs  image_rgb_rgba.rs  mod.rs  normal.rs
src/contrib/: draw_image_transformed.rs  gauss_blur.rs  k_curve.rs  mod.rs
src/fill_color/: gradient.rs  mod.rs  pattern.rs  transform.rs
src/interpolation/: mod.rs
src/models/: arc.rs  cubic.rs  ellipse.rs  line.rs  mod.rs  quad.rs
src/path_data_notation/: mod.rs  tokenize.rs
src/pixel/: mod.rs  premultiplied_rgba.rs  rgba.rs
