[package]
name = "nanachi"
version = "0.0.1"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2018"
repository = "https://github.com/carrotflakes/nanachi"
keywords = ["graphics"]
license = "MIT"
readme = "README.md"
description = "2D graphics library (under development)"
exclude = [
    "my_image.png",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["image-crate"]

path-data-notation = []
image-crate = ["image"]

[dependencies]
image = { version = "0.23", default-features = false, optional = true }
lyon_geom = "0.16"

[dev-dependencies]
rand_pcg = "0.2"
rand_core = "0.5"
image = { version = "0.23", features = ["png"] }

[[example]]
name = "new_nanachi"
required-features = ["path-data-notation"]

[[example]]
name = "path_data_notation"
required-features = ["path-data-notation"]
