[package]
name = "nanachi"
version = "0.0.2"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2018"
repository = "https://github.com/carrotflakes/nanachi"
keywords = ["graphics"]
license = "MIT"
readme = "README.md"
description = "2D graphics library"
exclude = [
    "*.png",
    "gui",
]
categories = ["graphics"]

[features]
default = ["image-crate", "path-data-notation"]

path-data-notation = []
image-crate = ["image"]

[dependencies]
image = { version = "0.23", default-features = false, optional = true }
lyon_geom = "0.16"

[dev-dependencies]
rand_pcg = "0.2"
rand_core = "0.5"
image = { version = "0.23", features = ["png"] }
rusttype = "0.9"
