[package]
name = "nanachi"
version = "0.0.4"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2021"
repository = "https://github.com/carrotflakes/nanachi"
keywords = ["graphics"]
license = "MIT"
readme = "README.md"
description = "2D graphics library"
exclude = [
    "*.png",
    "gui",
]
categories = ["graphics"]

[features]
default = ["image-crate", "path-data-notation"]

path-data-notation = []
image-crate = ["image"]

[dependencies]
image = { version = "0.24", default-features = false, optional = true }
lyon_geom = "1.0"

[dev-dependencies]
rand_pcg = "0.3"
rand_core = "0.6"
image = { version = "0.24", features = ["png"] }
rusttype = "0.9"
